<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recUsrName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#212020"
            android:textSize="25sp"
            android:text="@string/name_of_place"
            />

        <ImageView
            android:layout_width="350dp"
            android:layout_marginTop="30dp"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/recImg"
            android:contentDescription="@string/img"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:layout_marginTop="5dp"
            android:paddingRight="15dp"
            android:textColor="#326547"
            android:textSize="18sp"
            android:id="@+id/recUsrTitle"
            android:text="@string/tsp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/type_of_space"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:id="@+id/recyclerType"
            android:paddingRight="15dp"
            android:textSize="18sp"
            android:textColor="#526894"
            android:layout_marginBottom="5dp"

            />
    </LinearLayout>


</android.support.v7.widget.CardView>
